--- a/.github/workflows/update-action.yml
+++ b/.github/workflows/update-action.yml
@@ -33,8 +33,9 @@ jobs:
     - name: Commit Latest Release Version
       if: steps.git-check.outputs.modified == 'true'
       run: |
-        git config --global user.name 'BzzzThe18th'
-        git config --global user.email 'BzzzThe18th@users.noreply.github.com'
+        git config --global user.name 'CreeperLogMat'
+        git config --global user.email 'CreeperLogMat@users.noreply.github.com'
         git add modinfo.json
         git commit -am "Update modinfo.json"
         git push
+
